--- a/Projects/index.html
+++ b/Projects/index.html
@@ -34,6 +34,13 @@
 
         </div> -->
         <div class="lists" style="text-align: center;">
+            <h1>StudyBuds</h1>
+            
+            <p>StudyBuds is a online library Where Aspirants can study online</p>
+            <a href="https://study-buds.vercel.app/#" style="color: white; background-color: #111; padding: 5px;">Live</a>
+
+        </div>
+        <div class="lists" style="text-align: center;">
             <h1> 1. Rock Paper Scissor </h1>
             
             <p>Rock Paper Scissor Using JavaScript</p>
