--- a/Projects/index.html
+++ b/Projects/index.html
@@ -34,10 +34,10 @@
 
         </div> -->
         <div class="lists" style="text-align: center;">
-            <h1>StudyBuds</h1>
+            <h1>StudyMouse</h1>
             
             <p>StudyBuds is a online library Where Aspirants can study online</p>
-            <a href="https://study-buds.vercel.app/#" style="color: white; background-color: #111; padding: 5px;">Live</a>
+            <a href="https://study-mouse.vercel.app/" style="color: white; background-color: #111; padding: 5px;">Live</a>
 
         </div>
         <div class="lists" style="text-align: center;">
