--- a/Projects/index.html
+++ b/Projects/index.html
@@ -36,7 +36,7 @@
         <div class="lists" style="text-align: center;">
             <h1>StudyMouse</h1>
             
-            <p>StudyBuds is a online library Where Aspirants can study online</p>
+            <p>StudyMouse is a online library Where Aspirants can study online</p>
             <a href="https://study-mouse.vercel.app/" style="color: white; background-color: #111; padding: 5px;">Live</a>
 
         </div>
