--- a/Projects/index.html
+++ b/Projects/index.html
@@ -43,7 +43,7 @@
         <div class="lists" style="text-align: center;">
             <h1>9. talk-banana</h1>
             
-            <p>StudyMouse is a online library Where Aspirants can study online</p>
+            <p>Translate text using api</p>
             <a href="https://talk-banaaana.netlify.app/" style="color: white; background-color: #111; padding: 5px;">Live</a>
 
         </div>
