--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <a href="https://in.linkedin.com/in/divyansh-pratap-singh-5338a5272"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://twitter.com/coder_divyansh"><i class="fa-brands fa-twitter"></i></a>
         </div>
-        <p class="end">Made with ❤  by Divyansh Pratap Singh</p>
+        <p class="end">Made with ❤  by Divyansh</p>
 
     </footer>
     
