--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
     <footer class="footer">
-        <h1>Connect Socially</h1>
+        <h1>Connect Socially here</h1>
         <div class="social-link">
             <a href="https://github.com/divyansh2375"><i class="fa-brands fa-github"></i></a>
             <a href="https://in.linkedin.com/in/divyansh-pratap-singh-5338a5272"><i class="fa-brands fa-linkedin"></i></a>
